--- a/Correctrly_structured_project/.env
+++ b/Correctrly_structured_project/.env
@@ -3,3 +3,4 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=carrepairshop
+GOOGLE_MAPS_API_KEY=AIzaSyA3nYXMiuY61TAkEOJYpK6ejSG8Gw7z7Fo
