--- a/Correctrly_structured_project/package.json
+++ b/Correctrly_structured_project/package.json
@@ -15,6 +15,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
