--- a/Correctrly_structured_project/package.json
+++ b/Correctrly_structured_project/package.json
@@ -25,6 +25,7 @@
     "mssql": "^10.0.2",
     "mysql2": "^3.11.3",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "package.json": "^2.0.1",
     "recaptcha": "^1.2.1",
     "session": "^0.1.0",
