--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "migrate": "npx knex migrate:latest --knexfile knexfile.cjs",
     "seed": "npx knex seed:run --knexfile knexfile.cjs",
     "setup": "npm run migrate && npm run seed",
-    "start": "node src/app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
