--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-mysql-session": "^3.0.3",
     "express-recaptcha": "^5.1.0",
     "express-session": "^1.18.0",
     "helmet": "^8.0.0",
