email sending implemented and alerts perfected, aswell as removed unnecesary css in EJS files

--- a/example .env
+++ b/example .env
@@ -13,9 +13,10 @@ DATABASE_URL=mysql2://temp_User:temp_password@localhost:3306/carrepairshop
 NODE_ENV=development
 SESSION_SECRET=AIzaSdjyll0YXMsuY61TAkEODYpK6efdsaw2Gw7z7Fo # Change this to a random string 
 
-# To have email working, you need to set up a mailtrap account
+# To have email working, you need to set up a inbox account
 # can run the app without this
-MAIL_HOST=
+MAIL_HOST=mail.inbox.lv
+MAIL_PORT=465
 MAIL_USER=
 MAIL_PASSWORD=
 MAIL_SENDER_DEFAULT=
